--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/lodash": "^4.17.10",
+		"@types/luxon": "^3.4.2",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -30,5 +32,9 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lodash": "^4.17.21",
+		"luxon": "^3.5.0"
+	}
 }
