--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"lodash": "^4.17.21",
-		"luxon": "^3.5.0"
+		"luxon": "^3.5.0",
+		"oidc-client-ts": "^3.1.0"
 	}
 }
