Run chart update on schedule

--- a/.github/workflows/update-chart-data.yml
+++ b/.github/workflows/update-chart-data.yml
@@ -1,6 +1,9 @@
 name: Update chart data
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  schedule:
+      - cron: '0 22 * * 5'
 
 jobs:
   update-chart-data:
